force-app/main/default/objects/Quote/fields/FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>FechaCreacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación</label>
    <type>DateTime</type>
</CustomField>