force-app/main/default/objects/Quote/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>