force-app/main/default/objects/Quote/fields/ObraCode__c.field-meta.xml
<CustomField>
    <fullName>ObraCode__c</fullName>
    <label>Código de Obra</label>
    <length>30</length>
    <type>Text</type>
</CustomField>