force-app/main/default/objects/Quote/recordTypes/EstimacionQuote.recordType-meta.xml
<RecordType>
    <fullName>EstimacionQuote</fullName>
    <active>true</active>
    <label>Estimación</label>
</RecordType>