force-app/main/default/objects/Quote/validationRules/NoEditarCotizacionEstimacion.validationRule-meta.xml
<ValidationRule>
    <fullName>NoEditarCotizacionEstimacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;EstimacionQuote&apos;, 
OR(
AND(TEXT(PRIORVALUE(Status)) = &apos;Aprobada&apos;,  
OR(ISPICKVAL(Status, &apos;Presupuesto&apos;), 
ISPICKVAL(Status, &apos;Draft&apos;)) ),
AND(TEXT(PRIORVALUE(Status)) = &apos;Cancelada&apos;,
OR(ISPICKVAL(Status, &apos;Presupuesto&apos;), 
ISPICKVAL(Status, &apos;Draft&apos;)))

)

)</errorConditionFormula>
    <errorMessage>No es posible modificar la cotización en el estado actual</errorMessage>
</ValidationRule>