force-app/main/default/objects/Quote/validationRules/validacionCambioEstadoSinPrecio.validationRule-meta.xml
<ValidationRule>
    <fullName>validacionCambioEstadoSinPrecio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName != &apos;EstimacionQuote&apos;,
ISCHANGED(Status), itemsSinActualizarPrecio__c &gt; 0,  !$Permission.modificarCotizacionDesactualizada)</errorConditionFormula>
    <errorMessage>No puede cambiar de estado ya que la cotización tiene productos sin el precio actualizado.</errorMessage>
</ValidationRule>